--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Cambay|Coustard|Leckerli+One|Montserrat:300,400,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cambay|Coustard|Leckerli+One|Montserrat:300,400,700,900" rel="stylesheet">
     
   </head>
   <body>
@@ -53,7 +53,7 @@
 
 			<div class="container"> <!-- Intro -->
 				<div class="col align-self-start">
-					<div class="col-12 col-lg-8">
+					<div class="col-12 col-lg-6">
 						<h3 class="text-left">Hi there</h3>
 						<h1 class="text-left">my name is <span class="text-primary">daniel</span> </h1>
 						<h2 class="text-left">I'm a Graphic Designer</h2>
@@ -65,7 +65,62 @@
 			</div>
 		</div> <!-- Intro -->
 	</header>
+	
+	<section class="container-fluid">
+		<div class="container">
+			<div class="row">
+				<div class="col-12 col-lg-6">
+					<h3 class="text-left">About me...</h3>
+					<h2 class="text-left">Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</h2>
+				</div>
+				<div class="col-12 col-lg-6">
+					<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+			</div>
+		</div>
+		<div class="container-fluid">
+			<div class="container">
+				<div class="row">
+				
+					<div class="col-6 col-md-4">
+						<div class="media">
+							<img class="d-flex align-self-start mr-3" src="assets/icon-1.png" alt="Generic placeholder image">
+	  						<div class="media-body">
+	    						<h5 class="mt-0">Web Design & User Interface</h5>
+								<p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</p>
+	 						</div>
+						</div>
+					</div>
+					<div class="col-6 col-md-4">
+						<div class="media">
+							<img class="d-flex align-self-start mr-3" src="assets/icon-2.png" alt="Generic placeholder image">
+	  						<div class="media-body">
+	    						<h5 class="mt-0">Brand Identity</h5>
+								<p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</p>
+	 						</div>
+						</div>
+					</div>
+					<div class="col-6 col-md-4">
+						<div class="media">
+							<img class="d-flex align-self-start mr-3" src="assets/icon-3.png" alt="Generic placeholder image">
+	  						<div class="media-body">
+	    						<h5 class="mt-0">HTML Templates & WordPress Themes</h5>
+								<p>Qirum est notare quam littera gothica, quam <nunc class=""></nunc></p> 
+							</div>
+						</div>
+					</div>
 
+				</div>
+			</div>
+		</div>
+	</section>
+
+	
 
 
 	
