--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 			<div class="container"> <!-- Intro -->
 				<div class="col align-self-start">
-					<div class="col-12 col-lg-6">
+					<div class="col-12 col-lg-8">
 						<h3 class="text-left">Hi there</h3>
 						<h1 class="text-left">my name is <span class="text-primary">daniel</span> </h1>
 						<h2 class="text-left">I'm a Graphic Designer</h2>
@@ -74,8 +74,8 @@
 					<h2 class="text-left">Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.</h2>
 				</div>
 				<div class="col-12 col-lg-6">
-					<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu.</p><br>
-					<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+					<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p><br>
+					<p class="text-left">Lorem ipsum dolor sit amet, consectetur sit.</p>
 				</div>
 			</div>
 		</div> <!-- Section -->
