better than before

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			</div>
 		</div> <!-- Section -->
 
-		<div class="container-fluid"> <!-- Service -->
+		<div class="container-fluid Service"> <!-- Service -->
 			<div class="container">
 				<div class="row">
 				
@@ -160,6 +160,55 @@
 			</div> <!-- Social Menu -->
 		</div>
 	</section>
+
+	<section class="container-fluid Portofolio"> <!-- Portofolio -->
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col-12 col-md-8">
+					<h3 class="text-left">Portofolio...</h3>
+					<h2 class="text-left">i make beautiful things!</h2>
+				</div>
+	  			<div class="col-12 col-md-4">
+	  				<a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">view all project</a>
+	  			</div>
+			</div>
+		</div>
+		<div class="container-fluid Portofolio"> 
+			<div class="card-group"> <!-- Gallery -->
+				<div class="row no-gutters">
+					<div class="col-6"> <!-- 1 -->
+		  				<div class="card">
+		    				<img class="card-img-top primary-photo" src="assets/image-1.jpg" alt="Card image cap">
+		    				<div class="card-body">
+		      					<div class="row no-gutters">
+		      						<div class="col-6">
+		      							<img class="card-img-top" src="assets/image-3.jpg" alt="Card image cap">
+		      						</div>
+		      						<div class="col-6">
+		      							<img class="card-img-top" src="assets/image-5.jpg" alt="Card image cap">
+		      						</div>
+		      					</div>
+		    				</div>
+		  				</div>
+					</div> <!-- 1 -->
+					<div class="col-3"> <!-- 2 -->
+		  				<div class="card">
+		    				<img class="card-img-top img-2" src="assets/image-2.jpg" alt="Card image cap">
+		  				</div>
+					</div> <!-- 2 -->
+					<div class="col-3"> <!-- 3 -->
+		  				<div class="card">
+							<img class="card-img-top primary-photo" src="assets/image-4.jpg" alt="Card image cap">
+							<div class="card-body">
+								<img class="card-img-top" src="assets/image-6.jpg" alt="Card image cap">
+							 </div>
+						</div>
+					</div> <!-- 3 -->
+				</div> 
+			</div> <!-- Gallery -->
+		</div> 
+
+	</section> <!-- Portofolio -->
 
 	
 
