better than before

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 		</div>
 	</section>
 
-	<section class="container-fluid Portofolio"> <!-- Portofolio -->
+	<section class="container-fluid Portofolio"> 
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-12 col-md-8">
@@ -174,41 +174,44 @@
 			</div>
 		</div>
 		<div class="container-fluid Portofolio"> 
-			<div class="card-group"> <!-- Gallery -->
-				<div class="row no-gutters">
-					<div class="col-6"> <!-- 1 -->
-		  				<div class="card">
-		    				<img class="card-img-top primary-photo" src="assets/image-1.jpg" alt="Card image cap">
-		    				<div class="card-body">
-		      					<div class="row no-gutters">
-		      						<div class="col-6">
-		      							<img class="card-img-top" src="assets/image-3.jpg" alt="Card image cap">
-		      						</div>
-		      						<div class="col-6">
-		      							<img class="card-img-top" src="assets/image-5.jpg" alt="Card image cap">
-		      						</div>
-		      					</div>
-		    				</div>
-		  				</div>
-					</div> <!-- 1 -->
-					<div class="col-3"> <!-- 2 -->
-		  				<div class="card">
-		    				<img class="card-img-top img-2" src="assets/image-2.jpg" alt="Card image cap">
-		  				</div>
-					</div> <!-- 2 -->
-					<div class="col-3"> <!-- 3 -->
-		  				<div class="card">
+			<div class="row no-gutters">
+				<div class="col-12 col-md-6">
+					<img class="card-img-top primary-photo" src="assets/image-1.jpg" alt="Card image cap">
+					<div class="row no-gutters">
+			    		<div class="col-6 col-md-6">
+			        		<img class="card-img-top" src="assets/image-3.jpg" alt="Card image cap">
+			      		</div>
+			      		<div class="col-6 col-md-6">
+			        		<img class="card-img-top" src="assets/image-5.jpg" alt="Card image cap">
+			        		<div class="card-img-overlay text-center">
+					   			<h6 class="card-title">User Interface</h6>
+					    		<p class="card-text">Socialister - Mobile UI Kit for Photoshop</p>
+					    		<img src="assets/details-icon.png" alt="icon">
+					    		<img src="assets/heart-icon.png" alt="icon">
+  							</div>
+			     		</div>
+			    	</div>
+			  	</div>
+				
+				<div class="col-12 col-md-3">
+					<img class="card-img-top img-2" src="assets/image-2.jpg" alt="Card image cap">
+				</div>
+				<div class="col-12 col-md-3">
+					<div class="row no-gutters">
+						<div class="col-12 col-md-12">		
 							<img class="card-img-top primary-photo" src="assets/image-4.jpg" alt="Card image cap">
-							<div class="card-body">
-								<img class="card-img-top" src="assets/image-6.jpg" alt="Card image cap">
-							 </div>
-						</div>
-					</div> <!-- 3 -->
-				</div> 
-			</div> <!-- Gallery -->
+			    		</div>
+			    		<div class="col-12 col-md-12">
+			        		<img class="card-img-top" src="assets/image-6.jpg" alt="Card image cap">
+			      		</div>
+				    	</div>
+				    </div>
+			  	</div>
+			</div>
+			
 		</div> 
 
-	</section> <!-- Portofolio -->
+	</section> 
 
 	
 
