better than before

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
 	<section class="container-fluid main-testimonial text-center">
 		<div class="opacity">
-			<div class="container testimonial">
+			<div class="container">
 				<div class="text-center">
 					<h3>Clients...</h3>
 					<h2>What Customers Say:</h2>
