better than before

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 					    		<img src="assets/heart-icon.png" alt="icon">
   							</div>
 					<div class="row no-gutters">
-			    		<div class="col-6 col-md-6">
-			        		<img class="card-img-top" src="assets/image-3.jpg" alt="Card image cap">
+			    		<div class="col-12 col-md-6">
+			        		<img class="card-img-top img-1" src="assets/image-3.jpg" alt="Card image cap">
 			        		<div class="card-img-overlay text-center">
 					   			<h6 class="card-title">User Interface</h6>
 					    		<p class="card-text">Socialister - Mobile UI Kit for Photoshop</p>
@@ -193,7 +193,7 @@
 					    		<img src="assets/heart-icon.png" alt="icon">
   							</div>
 			      		</div>
-			      		<div class="col-6 col-md-6">
+			      		<div class="col-12 col-md-6">
 			        		<img class="card-img-top" src="assets/image-5.jpg" alt="Card image cap">
 			        		<div class="card-img-overlay img-active text-center">
 					   			<h6 class="card-title">User Interface</h6>
@@ -255,7 +255,7 @@
 							<p>investigationes demonstraverunt lectores legere me lius quod ii legunt saepius nunc putamus parum claram.</p>
 							<div class="row justify-content-center">
 								<div class="media">
-									<img class="align-self-center mr-3" src="assets/profile.png" alt="Generic placeholder image">
+									<img class="rounded-circle align-self-center mr-3" src="assets/profile.png" alt="Generic placeholder image">
 									<div class="media-body">
 										<h5 class="text-left mt-0">Christina Smith</h5>
 										<p class="text-left">Marketing Envato Pty. Ltd.</p>
@@ -268,7 +268,7 @@
 							<p>investigationes demonstraverunt lectores legere me lius quod ii legunt saepius nunc putamus parum claram.</p>
 							<div class="row justify-content-center">
 								<div class="media">
-									<img class="align-self-center mr-3" src="assets/profile.png" alt="Generic placeholder image">
+									<img class="rounded-circle align-self-center mr-3" src="assets/profile.png" alt="Generic placeholder image">
 									<div class="media-body">
 										<h5 class="text-left mt-0">Christina Smith</h5>
 										<p class="text-left">Marketing Envato Pty. Ltd.</p>
@@ -302,6 +302,33 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</section>
+
+	<section class="container-fluid Blog">
+		<div class="container">
+			<div class="row main-article">
+  				<div class="col-12 col-md-6">
+  					<div class="row no-gutters">
+  						<div class="col-12 col-md-12">
+  							<h3 class="text-left">Blog...</h3>
+  							<h2 class="text-left">do not miss the useful articles</h2>
+  							<p class="text-left">Mirum est notare quam littera gothica, quam nunc parum claram...</p>
+  						</div>
+  						<div class="col-12 col-md-12 text-center article">
+					   			<h5>6 October</h5>
+					    		<p><q>Eodem modo typi, qui nunc nobis videntur parum clari, sollemnes parum</q></p>
+					    		<h6>Johnathan Miller</h6>
+  						
+  						</div>
+  					</div>
+  				</div>
+				<div class="col-12 col-md-6 article-1">
+				</div>
+			</div>
+
+
+			
 		</div>
 	</section>
 
