--- a/index.html
+++ b/index.html
@@ -352,14 +352,14 @@
 							    	</div>
 							    	</div>
 							  	</div>
-							  	
+
 							</div>
 
 						</div>
 					</div>
 				</div>
 				<div class="row main-article-2"> 
-					<div class="col-12 col-lg-3">
+					<div class="col-12 col-lg-3 pl-0">
 		          		<div class="standard-post text-left">
 		          			<h6 class="text-left mb-3">3 September</h6>
 		          			<h5 class="text-left">Standard Post Format</h5>
