better than before

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 			        		<p class="gray-text text-left">Qui nunc nobis videntur parum clari, sollemnes legere.</p>
 			        	</div>
 			        </div>
-			        <div class="col-12 col-lg-2">
+			        <div class="col-12 col-lg-2 pr-0">
 	          			<div class="view-all text-center">
 	           				<h6 class="white-text text-center">View <br>All Posts</h6>
 	          			</div>
